<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#295E73"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/textoInicial"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/valorConta"
        android:layout_width="191dp"
        android:layout_height="54dp"
        android:layout_marginTop="52dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/r_0_00"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/nPessoas"
        android:layout_width="191dp"
        android:layout_height="54dp"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/_0"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/valorConta" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/valor"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/valorConta"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/pessoas"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/valorConta"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/valorDivisao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/r_0_00"
        android:textColor="#FFFFFF"
        android:textSize="42sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nPessoas" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/compartilhaTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="60dp"
        android:clickable="true"
        android:contentDescription="@string/compartilha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/falaTexto"
        app:layout_constraintTop_toBottomOf="@+id/valorDivisao"
        app:srcCompat="@android:drawable/ic_menu_share" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/falaTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="52dp"
        android:clickable="true"
        android:contentDescription="@string/fala"
        app:fabSize="auto"
        app:layout_constraintEnd_toStartOf="@+id/compartilhaTexto"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valorDivisao"
        app:srcCompat="@android:drawable/ic_lock_silent_mode_off" />

</androidx.constraintlayout.widget.ConstraintLayout>